scrool overlap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h1{
 }
 html{
     scroll-behavior: smooth;
+    scroll-padding-top: 100px;
 }
 
 .header{
